test/classes/vass/ref-like-intents/ref-subclass.good
ref-subclass.chpl:14: error: value from coercion passed to ref formal 'arg'
